--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
           <p>000</p>
         </div>
       </div>
-      <form action="">
+      <form action="" onsubmit="return validateForm()">
         <label for="name">
           CARDHOLDER NAME
-          <input type="text" id="name" class="name cardholder" placeholder="e.g. Jane Appleseed" required />
+          <input type="text" id="name" name="name" class="name cardholder" placeholder="e.g. Jane Appleseed" required />
         </label>
         <label for="card-number"
           >CARD NUMBER
           <input
             type="text"
             id="card-number"
+            name="card-number"
             class="card-number cardholder"
             placeholder="e.g. 1234 5678 9123 0000"
             required
@@ -46,16 +47,18 @@
           <div class="date">
             <label for="month year">EXP. DATE (MM/YY)</label>
             <div class="month-year">
-              <input type="text" class="month" id="month" placeholder="MM" required/>
-              <input type="text" class="year" id="year" placeholder="YY" required/>
+              <input type="text" class="month" id="month" name="month" placeholder="MM" required/>
+              <input type="text" class="year" id="year" name="year" placeholder="YY" required/>
             </div>
           </div>
           <label for="cvc" class="cvc"
-            >CVC <input type="text" id="cvc" placeholder="e.g. 123" required/>
+            >CVC <input type="text" id="cvc" name="cvc" placeholder="e.g. 123" required/>
           </label>
         </div>
         <input type="submit" value="Confirm" class="button"/>
       </form>
+
     </main>
+
   </body>
 </html>
